2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes

2004-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/README: Added.

2004-11-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-canvas.c, rbgnome-canvas-item.c: 
	Follow Ruby/Libart changes. 

2004-11-11  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-canvas-util.c: Added a header.
	* src/rbgnome-canvas-path-def.c: Added Gnome::CanvasPathDef#bpath 
	Add a header.

2004-11-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-canvas-util.c: Added GnomeCanvas.join_gdk_to_art, 
	.cap_gdk_to_art, GnomeCanvasItem#reset_bounds, #update_bbox.
	* src/rbgnome-canvas-item.c: Fix critical assertion of 
	gnome_canvas_request_redraw().

2004-11-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-canvas.c: Gnome::Canvas#initialize returns nil not self. 

2004-10-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-canvas-item.c: Added Gnome::CanvasItem#request_update.
	* src/rbgnome-canvas.c: Added Gnome::Canvas::EPSILON, .convert_color
	Rename Gnome::Canvas#item_at to Gnome::Canvas#get_item_at.

2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/gnomecanvas2.rb: Support GLib::Log.set_log_domain.
	Define Gnome::Canvas::LOG_DOMAIN.
	* src/rbgnome-canvas.c: Update Copyright.

2004-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* README, src/rbgnome-canvas-item.c, src/rbgnomecanvas.h: Update Copyright.

2004-02-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/canvas-curve.rb: Replace Gdk::RGB.cmap to Gdk::RGB.colormap.
	* src/rbgnomecanvas.h: Add rbgno_canvas_path_def_get_type.
	* src/rbgnome-canvas-item.c: Add Gnome::CanvasShape, Gnome::CanvasRE, 
	Gnome::CanvasClipgroup.
	
2004-02-14  Vincent Isambart  <isambart@netcourrier.com>

	* extconf.rb: replaced PLATFORM with RUBY_PLATFORM.

2003-12-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-canvas-util.c: Fix a segfault of cpoint_to_ruby(). 
	(Bugs [ 859431 ])

2003-09-10  Masao Mutoh  <mutoh@highway.ne.jp>
