@@ -18,11 +18,11 @@ Install
 
 Copying
 -------
-   Copyright (c) 2002-2004 Ruby-GNOME2 Project Team
+   Copyright (c) 2002-2005 Ruby-GNOME2 Project Team
 
    This program is free software.
    You can distribute/modify this program under the terms of
-   the GNU LIBRARY General Public License version 2.
+   the GNU LESSER GENERAL PUBLIC LICENSE Version 2.1.
 
 Project Website
 ---------------
