@@ -1,3 +1,9 @@
+2005-02-15  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* README, COPYING.LIB src/*.c: 
+	Replace "GNU LIBRARY GENERAL PUBLIC LICENSE" to 
+	"GNU LESSER GENERAL PUBLIC LICENSE".
+
 2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* extconf.rb: Follow mkmf-gnome2.rb changes
